HomeLab/K8s/Clusters/k8s-room/web-ping.yaml
apiVersion: v1
kind: Pod
metadata:
  namespace: default
  name: web-ping-pod
  labels:
    project: web-ping
spec:
  containers:
    - name: web-ping
      image: registry.local/web-ping:1.1
      ports:
        - containerPort: 5000
  imagePullSecrets:
    - name: registry-local-client
