HomeLab/K8s/Clusters/k8s-room/andennis-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "andennis.com"
  namespace: default
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - andennis.com
      - ping.andennis.com
      - pgadmin.andennis.com
      - "*.andennis.com"
    secretName: andennis.com-tls
  rules:
    - host: ping.andennis.com
      http:
        paths:
          - backend:
              service:
                name: web-ping-cl
                port:
                  number: 8080
            path: /
            pathType: Prefix
    - host: pgadmin.andennis.com
      http:
        paths:
          - backend:
              service:
                name: pgadmin
                port:
                  number: 80
            path: /
            pathType: Prefix
    - host: '*.andennis.com'
      http:
        paths:
          - backend:
              service:
                name: web-andennis
                port:
                  number: 80
            path: /
            pathType: Prefix
    - host: andennis.com
      http:
        paths:
          - backend:
              service:
                name: web-andennis
                port:
                  number: 80
            path: /
            pathType: Prefix
